# starkdb

./: .gitignore  404.html  CMakeLists.txt  README.md  _redirects  index.html  sitemap.xml
bindings/cpp/: README.md  stark.hpp  urage.hpp
cli/src/: main.c
core/include/: stark.h  type_funcs.h  urage.h
core/src/: btree.c  database.c  database.h  database_api.c  pager.c  type.c
css/: styles.css
docs/: index.html
examples/cpp/: CMakeLists.txt  test  test.cpp
installation/: index.html
lab/: index.html
lab/css/: lab.css
lab/js/: lab.js
logs/: index.html
website/: 404.html
